RESOLVED FIXED297236
[Navigation API] Fix cross-document navigation interruption and promise rejection ordering.
https://bugs.webkit.org/show_bug.cgi?id=297236
Summary [Navigation API] Fix cross-document navigation interruption and promise rejec...
Basuke Suzuki
Reported 2025-08-11 13:03:49 PDT
When a cross-document navigation is interrupted by another navigation, the first navigation's committed and finished promises should be rejected with an AbortError.
Attachments
Basuke Suzuki
Comment 1 2025-08-11 13:04:58 PDT
Basuke Suzuki
Comment 2 2025-08-11 13:12:01 PDT
EWS
Comment 3 2025-08-12 21:56:42 PDT
Committed 298605@main (25b3c101023f): <https://commits.webkit.org/298605@main> Reviewed commits have been landed. Closing PR #49232 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.