[Navigation API] Fix cross-document navigation interruption and promise rejection ordering. https://bugs.webkit.org/show_bug.cgi?id=297236 rdar://158067763

Reviewed by Tim Nguyen.

When a cross-document navigation is interrupted by another navigation, the
first navigation's committed and finished promises should be rejected with
an AbortError. Previously, these promises were never rejected because
cross-document navigation trackers were cleaned up immediately after the
NavigateEvent was dispatched, rather than remaining alive until the
navigation completes or gets interrupted.

Additionally, when rejecting navigation promises, the committed promise
should be rejected before the finished promise to match the Navigation API
specification ordering.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-204-205-download-then-same-document-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-cross-document-double-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::rejectFinishedPromise):
(WebCore::Navigation::innerDispatchNavigateEvent):
* Source/WebCore/platform/Logging.h:

Canonical link: https://commits.webkit.org/298605@main